--- a/shard.yml
+++ b/shard.yml
@@ -20,6 +20,10 @@ dependencies:
     github: amberframework/amber
     version: ~> 0.7.0
 
+  citrine-i18n:
+    github: amberframework/citrine-i18n
+    version: ~> 0.1.0
+
   granite_orm:
     github: amberframework/granite-orm
     version: ~> 0.9.0
@@ -30,7 +34,7 @@ dependencies:
 
   quartz_mailer:
     github: amberframework/quartz-mailer
-    version: ~> 0.5.0
+    version: ~> 0.5.1
 
   pg:
     github: will/crystal-pg
