--- a/shard.yml
+++ b/shard.yml
@@ -18,15 +18,15 @@ targets:
 dependencies:
   amber:
     github: amberframework/amber
-    version: ~> 0.7.0
+    version: ~> 0.7.2
 
   citrine-i18n:
     github: amberframework/citrine-i18n
     version: ~> 0.1.0
 
   granite_orm:
-    github: amberframework/granite-orm
-    version: ~> 0.9.0
+    github: c910335/granite
+    branch: add-field!
 
   crinder:
     github: c910335/crinder
